--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
         // Certificate Search Function
         function searchCertificate() {
             const code = document.getElementById('certificateSearch').value.trim();
-            if (code === '7788' || code === '200149' || code === '200150' || code === '200146' || code === '200147' || code === '200148' || code === '200145' || code === '200142' || code === '200144' || code === '200143' || code === '200135' || code === '200139' || code === '200141' || code === '200140' || code === '200136' || code === '200137' || code === '200138' || code === '200209' || code === '200210' || code === '200132' || code === '200134' || code === '200133' || code === '200131' || code === '200211' || code === '200205' || code === '200206' || code === '200207' || code === '200208' || code === '200201' || code === '200202' || code === '200203' || code === '200204' || code === '200197' || code === '200198' || code === '200199' || code === '200200' || code === '200192' || code === '200193' || code === '200194' || code === '200195' || code === '200196' || code === '200187' || code === '200191' || code === '200188' || code === '200189' || code === '200190' || code === '200181' || code === '200185' || code === '200186' || code === '200182' || code === '200183' || code === '200184' || code === '200175' || code === '200179' || code === '200180' || code === '200176' || code === '200177' || code === '200178' || code === '200101' || code === '200172' || code === '200173' || code === '200174' || code === '200128' || code === '200130' || code === '200129' || code === '200124' || code === '200126' || code === '200127' || code === '200125' || code === '200121' || code === '200122' || code === '200123' || code === '200115' || code === '200119' || code === '200120' || code === '200116' || code === '200117' || code === '200106' || code === '200109' || code === '200112' || code === '200113' || code === '200114' || code === '200110' || code === '200107' || code === '200108' || code === '200103' || code === '200105' || code === '200102' || code === '200104' || code === '200171' || code === '200111' || code === '200118' || code === '100568' || code === '200567' || code === '2026' || code === '2027') {
+            if (code === '7788' || code === '200157' || code === '200158' || code === '200159' || code === '200160' || code === '200154' || code === '200155' || code === '200156' || code === '200151' || code === '200152' || code === '200153' || code === '200149' || code === '200150' || code === '200146' || code === '200147' || code === '200148' || code === '200145' || code === '200142' || code === '200144' || code === '200143' || code === '200135' || code === '200139' || code === '200141' || code === '200140' || code === '200136' || code === '200137' || code === '200138' || code === '200209' || code === '200210' || code === '200132' || code === '200134' || code === '200133' || code === '200131' || code === '200211' || code === '200205' || code === '200206' || code === '200207' || code === '200208' || code === '200201' || code === '200202' || code === '200203' || code === '200204' || code === '200197' || code === '200198' || code === '200199' || code === '200200' || code === '200192' || code === '200193' || code === '200194' || code === '200195' || code === '200196' || code === '200187' || code === '200191' || code === '200188' || code === '200189' || code === '200190' || code === '200181' || code === '200185' || code === '200186' || code === '200182' || code === '200183' || code === '200184' || code === '200175' || code === '200179' || code === '200180' || code === '200176' || code === '200177' || code === '200178' || code === '200101' || code === '200172' || code === '200173' || code === '200174' || code === '200128' || code === '200130' || code === '200129' || code === '200124' || code === '200126' || code === '200127' || code === '200125' || code === '200121' || code === '200122' || code === '200123' || code === '200115' || code === '200119' || code === '200120' || code === '200116' || code === '200117' || code === '200106' || code === '200109' || code === '200112' || code === '200113' || code === '200114' || code === '200110' || code === '200107' || code === '200108' || code === '200103' || code === '200105' || code === '200102' || code === '200104' || code === '200171' || code === '200111' || code === '200118' || code === '100568' || code === '200567' || code === '2026' || code === '2027') {
                 // Show the modal with appropriate certificate
                 document.getElementById('certificateModal').classList.remove('hidden');
                 document.body.style.overflow = 'hidden';
@@ -863,6 +863,66 @@
                         break;
                     case '200141':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/sCiLvaZ.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200151':
+                        document.getElementById('certificateFront').src = ' https://i.imgur.com/jxYrkmA.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200152':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/KdA8Dsb.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200153':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/em6VYcu.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200154':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/6iecNvv.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200155':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/w5GeeDc.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200156':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/xNYyGZd.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200157':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/L5KYOZq.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200158':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/16uH6Q5.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200159':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/FKxRvTv.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200160':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/AqGXCtK.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
