--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
-                    <p class="text-center text-emerald-800 mt-2 text-sm">Somos un laboratorio especializado en esmeraldas</p>
+                    <p class="text-center text-emerald-800 mt-2 text-sm">Especialistas en esmeraldas colombianas.
+También certificamos otras gemas naturales bajo los mismos estándares gemológicos.</p>
                 </div>
             </div>
         </div>
