--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </div>
                     <p class="text-center text-emerald-800 mt-2 text-sm">Especialistas en esmeraldas colombianas.</p>
                      </div>
-                    <p class="text-center text-emerald-800 mt-2 text-sm">También certificamos otras gemas naturales bajo los mismos estándares gemológicos.</p>
+                    <p class="text-center text-emerald-800 mt-2 text-sm">Certificamos otras gemas naturales bajo los mismos estándares gemológicos.</p>
                 </div>
             </div>
         </div>
@@ -274,7 +274,7 @@
             <!-- Other Gems Button -->
             <button onclick="toggleOtherGems()"
                     class="bg-gray-500 hover:bg-gray-600 text-white px-6 py-3 rounded-lg shadow-lg transition flex items-center justify-center gap-2">
-                <i class="fas fa-diamond"></i> Otras gemas
+                <i class="fas fa-diamond"></i> Otras gemas certificadas
             </button>
         </div>
 
