--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             white-space: nowrap;
             opacity: 0;
             transition: opacity 0.3s;
+            color: #000;
+            font-size: 14px;
         }
         .whatsapp-float:hover .tooltip {
             opacity: 1;
