--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
             <!-- Emerald Shape Simulator -->
             <div class="mb-10">
-                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Forma de esmeralda</h3>
+                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Forma de tallado</h3>
                 <div class="grid md:grid-cols-2 gap-8 calculator-grid">
                     <div>
                         <div class="grid grid-cols-3 gap-4 mb-6 shape-grid">
