--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Diamond -->
                 <div class="bg-gray-50 p-4 rounded-lg">
-                    <img src="https://i.imgur.com/example1.jpg" alt="Diamante" class="w-full h-48 object-cover rounded-lg mb-3">
+                    <img src="https://i.imgur.com/Nby8yp4.jpeg" alt="Diamante" class="w-full h-48 object-cover rounded-lg mb-3">
                     <h3 class="text-xl font-semibold text-gray-800 mb-2">Diamante</h3>
                     <p class="text-gray-700 mb-2">El material natural más duro conocido, con índice de refracción de 2.42.</p>
                     <div class="flex items-center text-sm text-gray-600">
