--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 
                 <!-- Ruby -->
                 <div class="bg-gray-50 p-4 rounded-lg">
-                    <img src="https://i.imgur.com/example2.jpg" alt="Rubí" class="w-full h-48 object-cover rounded-lg mb-3">
+                    <img src="https://i.imgur.com/T2lxTHZ.jpeg" alt="Rubí" class="w-full h-48 object-cover rounded-lg mb-3">
                     <h3 class="text-xl font-semibold text-gray-800 mb-2">Rubí</h3>
                     <p class="text-gray-700 mb-2">Variedad roja del corindón, considerado una de las cuatro gemas preciosas.</p>
                     <div class="flex items-center text-sm text-gray-600">
@@ -622,7 +622,7 @@
                 
                 <!-- Sapphire -->
                 <div class="bg-gray-50 p-4 rounded-lg">
-                    <img src="https://i.imgur.com/example3.jpg" alt="Zafiro" class="w-full h-48 object-cover rounded-lg mb-3">
+                    <img src="https://i.imgur.com/pvjLUeQ.jpeg" alt="Zafiro" class="w-full h-48 object-cover rounded-lg mb-3">
                     <h3 class="text-xl font-semibold text-gray-800 mb-2">Zafiro</h3>
                     <p class="text-gray-700 mb-2">Variedad azul del corindón, aunque puede encontrarse en otros colores excepto rojo.</p>
                     <div class="flex items-center text-sm text-gray-600">
