--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                 
                 <!-- Topaz -->
                 <div class="bg-gray-50 p-4 rounded-lg">
-                    <img src="https://i.imgur.com/kuN63AS.jpeg" alt="Topacio" class="w-full h-48 object-cover rounded-lg mb-3">
+                    <img src="https://i.imgur.com/0eq2TJy.jpeg" alt="Topacio" class="w-full h-48 object-cover rounded-lg mb-3">
                     <h3 class="text-xl font-semibold text-gray-800 mb-2">Topacio</h3>
                     <p class="text-gray-700 mb-2">Gema silicato de aluminio y flúor, disponible en varios colores.</p>
                     <div class="flex items-center text-sm text-gray-600">
